# l2speech-ree-group-proj

./: .gitignore  README.md  pyproject.toml
reports/final/: align_1st_read_aloud_audio_and_text.html  convert_1st_read_aloud_weba_2_wav.html  split_target_audio_segment.html
src/l2speech_ree_group_proj/: __init__.py  align_1st_read_aloud_audio_and_text.ipynb  convert_1st_read_aloud_weba_2_wav.ipynb  split_target_audio_segment.ipynb  wav2vec_fa.py  weba_2_wav.py
