[project]
name = "l2speech-ree-group-proj"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "RusCucumber", email = "w.d.ryu.m@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.2.1",
    "pandas>=2.3.3",
    "notebook>=7.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/l2speech_ree_group_proj"]

[tool.ruff]
target-version = "py311"
line-length = 119
exclude = [".mypy_cache"]
 
[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
